# debate-rank

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 44b11a924b17_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: arguments.py  health.py  seed.py  topics.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  argument.py  score.py  topic.py
backend/app/schemas/: __init__.py  argument.py  error.py  score.py  topic.py
backend/app/services/: judge.py  sanitization.py  scoring.py
backend/data/: seed_arguments.json
backend/scripts/: seed.py
backend/tests/: conftest.py  test_api.py  test_database.py  test_judge.py  test_sanitization.py  test_schemas.py  test_scoring.py
docs/: architecture.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ArgumentDetailDrawer.tsx  ColorModeButton.tsx  JudgeCard.tsx  Leaderboard.tsx  LeaderboardRow.tsx  ScoreRadarChart.tsx  ScoringProgress.tsx  SubmitArgumentModal.tsx  TopicHeader.tsx  WeightSlider.tsx  WeightSliderPanel.tsx
frontend/src/hooks/: useArgumentPolling.ts  useColorMode.ts  useLeaderboard.ts  useWeights.test.ts  useWeights.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
