[project]
name = "debaterank-backend"
version = "0.1.0"
description = "DebateRank — Multi-criteria LLM-as-judge evaluation backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic-settings>=2.0,<3",
    "anthropic>=0.40,<1",
]

[dependency-groups]
dev = [
    "ruff>=0.8,<1",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "psycopg2-binary>=2.9.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
